Kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: current-account-service
spec:
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 8080 
  selector:
    app: current-account-service
---
apiVersion: v1
kind: Service
metadata:
  name: savings-account-service
spec:
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 8080 
  selector:
    app: savings-account-service
---
apiVersion: v1
kind: Service
metadata:
  name: credit-card-service
spec:
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 8080 
  selector:
    app: credit-card-service
---
apiVersion: v1
kind: Service
metadata:
  name: banking-service
spec:
  type: LoadBalancer
  selector:
    app: banking-service
  ports:
    - port: 80
      targetPort: 8080
